--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 p,
@@ -57,6 +58,7 @@ ul {
 
 .svg {
   width: 41px;
+  cursor: pointer;
 }
 
 .nav {
@@ -79,6 +81,7 @@ ul {
   background-size: cover;
   background-color: black;
   position: relative;
+  transition: background-image 1s ease-in-out;
 }
 
 .about {
@@ -599,10 +602,6 @@ ul {
   pointer-events: none;
 }
 
-
-
-
-
 .wrap {
   height: 100%;
   display: flex;
@@ -624,11 +623,7 @@ ul {
   font-weight: 700;
   color: #ffffff;
   background: #8017ff;
-  background: linear-gradient(
-    90deg,
-    #8017ff 0%,
-    rgb(140, 12, 159) 100%
-  );
+  background: linear-gradient(90deg, #8017ff 0%, rgb(140, 12, 159) 100%);
   border: none;
   border-radius: 1000px;
   box-shadow: 12px 12px 24px rgba(116, 32, 132, 0.64);
@@ -696,3 +691,42 @@ ul {
     opacity: 0;
   }
 }
+
+/* DROPDOWN */
+
+/* Контейнер для иконки и дропдауна */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Скрытый дропдаун */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Стили для пунктов дропдауна */
+.dropdown-content span {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Стили для пунктов дропдауна при наведении */
+.dropdown-content span:hover {
+  background-color: #f1f1f1;
+}
+
+/* Показать дропдаун при клике */
+.show {
+  display: block;
+}
+
+
+/* SLIDESHOW */
