--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   font-weight: 400;
   font-style: normal;
   overflow-x: hidden;
+  background-color: black;
 }
 
 p,
@@ -170,6 +171,7 @@ ul {
 }
 .adv-img {
   width: 70px;
+  filter: drop-shadow(0 0 60px rgba(222, 176, 8, 0.807));
 }
 
 .adv-title {
@@ -191,7 +193,7 @@ ul {
 }
 
 .services {
-  height: 3225px;
+  height: auto;
   background-image: url('./images/3\ СТРАНИЦА.png');
   background-size: cover;
   background-position: right;
@@ -233,8 +235,13 @@ ul {
 /*footer*/
 
 .footer {
-  height: 420px;
+  height: 100%;
   background-color: #eeeeee;
+  padding-bottom: 50px;
+}
+
+iframe {
+  margin-top: 24px;
 }
 
 .info {
@@ -399,7 +406,7 @@ ul {
   /*services*/
 
   .services {
-    height: 3327px;
+    height: auto;
   }
 
   .services-title {
@@ -444,7 +451,7 @@ ul {
   }
   /*footer*/
   .footer {
-    height: 209px;
+    height: 100%;
   }
   .footer-container {
     display: flex;
@@ -578,10 +585,12 @@ ul {
 .modal-content {
   background-color: #fefefe;
   margin: 5% auto;
-  padding: 20px;
+  padding: 56px 28px;
   border: 1px solid #888;
   width: 80%;
-  max-width: 500px;
+  max-width: 560px;
+  position: relative;
+  border-radius: 5px;
 }
 
 .close {
@@ -589,6 +598,9 @@ ul {
   float: right;
   font-size: 28px;
   font-weight: bold;
+  position: absolute;
+  right: 14px;
+  top: 6px;
 }
 
 .close:hover,
@@ -716,6 +728,8 @@ ul {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  cursor: pointer;
+  user-select: none;
 }
 
 /* Стили для пунктов дропдауна при наведении */
@@ -728,5 +742,113 @@ ul {
   display: block;
 }
 
+.form-group {
+  & input {
+    padding: 20px 26px;
+    background-color: #dbdbdb;
+    font-size: 18px;
+    font-family: 'Montserrat';
+    border: 0 solid;
+    width: 100%;
+    border-radius: 8px;
+  }
 
-/* SLIDESHOW */
+  & input::placeholder {
+    color: black;
+  }
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  & > * + * {
+    margin-top: 10px;
+  }
+}
+
+.label-container {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  font-size: 18px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding-left: 36px;
+  padding-top: 4px;
+
+  & input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+}
+
+.label-container:hover input ~ .checkmark {
+  background-color: #b1b1b1;
+}
+
+.label-container input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 28px;
+  width: 28px;
+  background-color: #dbdbdb;
+  border-radius: 3px;
+}
+
+.checkmark:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+.label-container .checkmark:after {
+  left: 10px;
+  top: 5px;
+  width: 7px;
+  height: 14px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.label-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.checkbox-container {
+  display: flex;
+  flex-direction: column;
+  & > * + * {
+    margin-top: 14px;
+  }
+}
+
+.send {
+  margin-top: 35px;
+  height: 70px;
+  width: 252px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8017FF;
+  box-shadow: 0px 5px 50px 0px #53159F;
+  font-size: 20px;
+  font-family: "Montserrat";
+  font-weight: 600;
+  color: white;
+  border: 0;
+  cursor: pointer;
+  border-radius: 5px;
+}
